<resources>
    <string name="app_name">The Brand App</string>
    <string name="action_settings">Settings</string>
    <string name="contacts_string">Contacts</string>
    <string name="Email">Email</string>
    <string name="CreateAccount">No account yet? Create one</string>
    <string name="emailHint" translatable="false">johndoe@gmail.com</string>
    <string name="passwordHint">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="signupNameValue">Username</string>
    <string name="signupCreateAccountBtn">Create Account</string>
    <string name="signupAlreadyMember">Already a member? Login</string>
    <string name="title_activity_map">Map</string>
    <string name="write_msg_here">Write chat message here</string>
    <string name="txtTempDegree" translatable="false">°</string>
    <string name="txtStatus" translatable="false">Status</string>
    <string name="txtCurrentWeather">Current weather:</string>
    <string name="this_device_do_not_sup_crop">This device doesn\'t support the crop action!</string>
    <string name="txtAddContact">Add contact</string>
    <string name="txtAddContactToList">Add a contact via e-mail</string>
    <string name="txtEmailHint2" translatable="false">friend@gmail.com</string>
    <string name="txtPermission">You need to allow camera and location access</string>
    <string name="txtPermissionDenied">Permission denied</string>
    //FIrebase
    <string name="storageURL" translatable="false">gs://the-brand-app.appspot.com</string>
    <string name="users">Users</string>
    <string name="chats">Chats</string>

</resources>
