<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10"
    tools:context="com.alexcarstensen.thebrandapp.LoginActivity">

    <TextView
        android:id="@+id/TextViewAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="123dp"
        android:textSize="16sp"
        android:text="@string/txtAddContactToList"/>

    <TextView
        android:id="@+id/TextViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:layout_weight="0.06"
        android:text="@string/Email"/>

    <EditText
        android:id="@+id/EditTextEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/emailTextView"
        android:ems="10"
        android:hint="@string/txtEmailHint2"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/ButtonAddContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:text="@string/txtAddContact"/>

</LinearLayout>
